Fixed logo resolution and z-index problem

--- a/src/styles/navbar/navbar.module.scss
+++ b/src/styles/navbar/navbar.module.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background: transparent;
+  z-index: 10000;
 
   .navbar {
     display: flex;
@@ -28,10 +29,11 @@
         justify-content: center;
         align-items: center;
 
-        > li {
+        >li {
           list-style-type: none;
           padding: 0 10px;
-          > a {
+
+          >a {
             text-decoration: none;
           }
         }
@@ -49,6 +51,7 @@
 
   @include mixins.tablet {
     top: var(--navbar-spacer-tablet);
+
     .navbar {
       width: calc(100% - 2 * var(--edge-spacer) * 0.3);
     }
@@ -62,17 +65,17 @@
 
   @include mixins.sm-phone {
     top: var(--navbar-spacer-mobile);
+
     .navbar {
       width: calc(100% - 2 * var(--edge-spacer) * 0.1);
       position: relative;
+
       .navbar_right {
         .redirects {
           backdrop-filter: blur(16px);
           position: absolute;
           width: calc(100% + 2 * var(--edge-spacer) * 0.1);
-          height: calc(
-            100vh - var(--navbar-height) - 2 * var(--navbar-spacer-mobile)
-          );
+          height: calc(100vh - var(--navbar-height) - 2 * var(--navbar-spacer-mobile));
           left: calc(var(--edge-spacer) * -0.1);
           top: calc(var(--navbar-height) + var(--navbar-spacer-mobile));
 
@@ -85,14 +88,14 @@
           overflow: hidden;
           transition: max-height 0.75s ease-in-out;
 
-          > li {
+          >li {
             width: 100%;
             margin-left: calc(var(--edge-spacer) * 0.1);
             transition: transform 0.8s ease-in-out 0.3s;
             transform: translateX(-100%);
 
-            > a {
-              > span {
+            >a {
+              >span {
                 font-size: 1.5rem;
                 opacity: 0;
                 transition: opacity 0.8s ease-in-out;
@@ -110,10 +113,9 @@
         }
 
         .activeDropdown {
-          max-height: calc(
-            100vh - var(--navbar-height) - 2 * var(--navbar-spacer-mobile)
-          );
+          max-height: calc(100vh - var(--navbar-height) - 2 * var(--navbar-spacer-mobile));
         }
+
         .dropdown {
           display: flex;
         }
